language/move-lang/tests/move_check/expansion/pack_no_fields_single_block_expr.exp
error: 

   ┌── tests/move_check/expansion/pack_no_fields_single_block_expr.move:4:21 ───
   │
 4 │         let s = S { false };
   │                     ^^^^^ Unrecognized Token: false
   ·
 4 │         let s = S { false };
   │                     ----- Expected:  "}", r#"[a-zA-Z_][a-zA-Z0-9_]*"#,
   │

