language/move-lang/tests/move_check/expansion/pack_no_fields_single_block_expr.move
module M {
    struct S { f: u64 }
    fun foo() {
        let s = S { false };
        let s = S { 0 };
    }
}
